--- a/front/src/app.css
+++ b/front/src/app.css
@@ -62,4 +62,25 @@ body {
       width: calc(100% - 20px);
     }
   }
+  /* app.css */
+
+.copy-btn {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 10px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.copy-btn:hover {
+  background-color: #45a049; /* Darker Green */
+}
+
   
